--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   },
   "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
   "dependencies": {
+    "express": "^4.15.2",
     "nodemon": "^1.9.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "eslint": "^2.12.0",
-    "eslint-config-ryansobol": "^7.3.1",
+    "eslint": "^3.10.2",
+    "eslint-config-ryansobol": "^10.0.2",
     "mocha": "^3.0.2",
     "mock-fs": "^3.11.0",
     "supertest": "^2.0.0"
